--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "@sammaye/ng-csv",
-  "version": "0.0.1",
+  "version": "0.0.3",
+  "description": "Angular CSVs",
+  "keywords": ["angular", "csv"],
+  "homepage": "https://github.com/Sammaye/ng-csv",
+  "author": {
+    "name": "Sammaye",
+    "email": "public@sammaye.com",
+    "url": "https://sammaye.com"
+  },
   "peerDependencies": {
     "@angular/common": "^8.1.1",
     "@angular/core": "^8.1.1"
